Add operation_id and tags
