# app.py
@@ -69,11 +69,11 @@ supported_content_types = [
     "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
 ]
 
-@app.post("/file_upload/generate_mapping_instruction")
+@app.post("/file_upload/generate_mapping_instruction", operation_id="File_upload_generate_mapping_instruction_post", tags=["generate-mapping-instruction"])
 async def generate_mapping_instruction(file: UploadFile = None, text: str = Form(None)):
     return await process_input(file, text, process_type="mapping_instruction")
 
-@app.post("/file_upload/generate_record")
+@app.post("/file_upload/generate_record", operation_id="File_upload_generate_record_post", tags=["generate-record"])
 async def generate_record(file: UploadFile = None, text: str = Form(None)):
     return await process_input(file, text, process_type="records")
 
